--- a/src/scss/tamplate/_feature.scss
+++ b/src/scss/tamplate/_feature.scss
@@ -20,9 +20,11 @@
   }
   &__swiper {
     overflow: hidden;
-    max-width: 1030px;
     margin-bottom: 70px;
     padding-bottom: 35px !important;
+    padding-right: 50px !important;
+    padding-left: 50px !important;
+    max-width: 1100px !important;
   }
   &__wrapper {
     width: 100%;
@@ -31,7 +33,7 @@
     cursor: pointer;
   }
   &__slide {
-    border: 0.5px solid green;
+    // border: 0.5px solid green;
     text-align: center;
     &-wrap {
       &-svg {
@@ -146,8 +148,7 @@
       max-width: 220px;
       margin-left: 35px;
       padding: 15px;
-      // padding-top: 15px;
-      // padding-bottom: 15px;
+      z-index: 2;
       
       background: linear-gradient(90deg, #9F2FFF 0%, #F44336 100%);
       border-radius: 35px;
@@ -170,24 +171,21 @@
   &__button {
     &-prev, &-next {
       position: absolute;
-      width: 50px;
+      width: 45px;
       top: 50%;
       transform: translateY(-50%);
       z-index: 2;
-      &[disabled=true] {
-        opacity: 0.5;
-      }
       & > svg {
         // fill: #593EFF;
         fill: $white;
         border-radius: 100%;
         padding: 6px;
-        background-color: rgba($blueFeature, 0.5);
+        background-color: rgba($blueFeature, 0.4);
         transition: all 350ms;
       }
       &:hover {
         svg {
-          background-color: rgba($blueFeature, 0.8);
+          background-color: rgba($blueFeature, 0.9);
         }
         cursor: pointer;
       }
@@ -196,7 +194,7 @@
       left: 0;
     }
     &-next { 
-      right: 0;
+      right: 13px;
     }
   }
 
